lib/src/compiler/tests/testdata/errors/73.out
error: syntax error
 --> line:1:9
  |
1 | private foo rule test { condition: true }
  |         ^ expected `global` or `rule`
  |